# ak1

./: CMakeLists.txt  Makefile  calculator.h  hello1.c  hello2.c  main.cpp
inc/: hello1.h
lab6/: hello1.c
